WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150544
[EFL] Fix inappropriate move semantics use in parseAndRemoveEnvironments function
https://bugs.webkit.org/show_bug.cgi?id=150544
Summary
[EFL] Fix inappropriate move semantics use in parseAndRemoveEnvironments func...
Joonghun Park
Reported
2015-10-25 03:55:13 PDT
In parseAndRemoveEnvironments function, it declares its paramerter type as rvalue. But in ProcessLauncher::launchProcess(), the argument of parseAndRemoveEnvironments still be used after the call of the function. Currently the rvalue is not assigned to any other variable in parseAndRemoveEnvironments, so it doesn't lead to runtime error but use of move semantic is not appropriate semantically in this case.
Attachments
Patch
(2.36 KB, patch)
2015-10-25 03:59 PDT
,
Joonghun Park
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joonghun Park
Comment 1
2015-10-25 03:59:41 PDT
Created
attachment 264006
[details]
Patch
WebKit Commit Bot
Comment 2
2015-11-01 16:25:05 PST
Comment on
attachment 264006
[details]
Patch Clearing flags on attachment: 264006 Committed
r191868
: <
http://trac.webkit.org/changeset/191868
>
WebKit Commit Bot
Comment 3
2015-11-01 16:25:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug